--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
         # ports:
         #     - "8080"
         environment:
-          - VIRTUAL_HOST=api.aws3.yongbuzhixi.com
-          - LETSENCRYPT_HOST=api.aws3.yongbuzhixi.com
+          - VIRTUAL_HOST=api.bce2.yongbuzhixi.com
+          - LETSENCRYPT_HOST=api.bce2.yongbuzhixi.com
           - LETSENCRYPT_EMAIL=dale.tel@139.com
     
     #api-code-app > drupal:fpm > php:7-fpm 只执行一次！！！
